[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "olsync"
dist-name = "overleaf-sync-fixed"
description-file = "README.md"
author = "Lawrence Yang (Fixed)"
author-email = "lawrenceeyang@gmail.com"
home-page = "https://github.com/Donzhu2020/overleaf-sync-fixed"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
requires = [
    "requests>=2.28,<3",
    "beautifulsoup4>=4.11,<5",
    "yaspin>=2,<3",
    "python-dateutil>=2.8,<3",
    "click>=8,<9",
    # socketIO-client removed: no longer used (replaced by plain HTTP)
    "PySide6>=6,<7",
]
keywords = "overleaf sync latex tex fix"

[tool.flit.scripts]
ols = "olsync.olsync:main"
